fixing padding in header, restructuring course detail session title on mobile - moving days to the body of session.

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -731,8 +731,8 @@ textarea:focus {
 /* HEADER  */
 .header {
   background-color: #FFFFFF;
-  padding-top: 30px;
-  padding-bottom: 20px;
+  padding-top: 15px;
+  padding-bottom: 17px;
 }
 
 header {
